--- a/package.json
+++ b/package.json
@@ -21,11 +21,15 @@
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^5.30.5",
     "@typescript-eslint/parser": "^5.30.5",
-    "eslint": "^8.19.0",
+    "eslint": "^8.22.0",
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-config-prettier": "^8.5.0",
+    "eslint-plugin-html": "^7.1.0",
     "eslint-plugin-import": "^2.26.0",
+    "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-prettier": "^4.2.1",
+    "eslint-plugin-promise": "^6.0.0",
+    "eslint-plugin-standard": "^5.0.0",
     "nodemon": "^2.0.16",
     "prettier": "^2.7.1"
   },
@@ -39,6 +43,7 @@
     "request": "^2.88.2",
     "sequelize": "^6.21.2",
     "sequelize-auto": "^0.8.8",
+    "twitter-lite": "^1.1.0",
     "xml-js": "^1.6.11"
   }
 }
